--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,15 +1,16 @@
 ---
-
+import Header from '../components/Header.astro'
 ---
 
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <title>Offres</title>
     </head>
     <body>
+        <Header />
         <h1>Offres</h1>
     </body>
 </html>
