--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,8 @@
 ---
-import Header from "../components/Header.astro"
+import Base from "../layout/Base.astro"
 ---
 
-<html lang="fr">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Accueil</title>
-	</head>
-	<body>
-		<Header />
-		<h1>Accueil</h1>
-	</body>
-</html>
+<Base titre="Accueil">
+	<h1>Accueil</h1>
+</Base>
 
