--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const { titre } = Astro.props;
 ---
 
@@ -14,6 +15,7 @@ const { titre } = Astro.props;
         <Header />
         <main>
         <slot />
+        <Footer />
         </main>
     </body>
 </html>
