--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -3,5 +3,7 @@ import Base from "../layout/Base.astro"
 ---
 
 <Base titre="Offres">
-    <h1>Offres</h1>
+    <div>
+    <h1 class="flex justify-center p-40 font-mono text-8xl">Offres</h1>
+    </div>
 </Base>
