--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,9 +1,62 @@
 ---
-import Base from "../layout/Base.astro"
+import Base from "../layout/Base.astro";
+const offres = [
+    {
+        adresse: "2821 Lake Sevilla, Palm Harbor, TX",
+        favori: true,
+        id: "64l3n8nar836i5j",
+        nbChambres: 4,
+        nbSdb: 2,
+        nomMaison: "Beverly Springfield",
+        prix: 2700,
+        surface: 45,
+        imgUrl: "image1.png",
+    },
+    {
+        adresse: "2699 Green Valley, Highland Lake",
+        favori: true,
+        id: "lo831zeg10hpm9y",
+        nbChambres: 4,
+        nbSdb: 2,
+        nomMaison: "Palm Harbor",
+        prix: 2095,
+        surface: 42,
+        imgUrl: "image2.png",
+    },
+    {
+        adresse: "909 Woodland St, Michigan, IN",
+        favori: false,
+        id: "s1zuhj19x8eb242",
+        nbChambres: 4,
+        nbSdb: 3,
+        nomMaison: "Faulkner Ave",
+        prix: 4550,
+        surface: 80,
+        imgUrl: "image3.png",
+    },
+];
 ---
 
 <Base titre="Offres">
-    <div>
+<div>
     <h1 class="flex justify-center p-40 font-mono text-8xl">Offres</h1>
-    </div>
+</div>
+<div>
+    {
+        offres.map((fname)=>(
+            <ul>
+                <li>{fname.adresse}</li>
+                <li>{fname.favori}</li>
+                <li>{fname.id}</li>
+                <li>{fname.nbSdb}</li>
+                <li>{fname.nomMaison}</li>
+                <li>{fname.prix}</li>
+                <li>{fname.surface}</li>
+                <li>{fname.imgUrl}</li>
+            </ul>
+        )
+    
+    )
+    }
+</div>
 </Base>
