Interactivité pages offres

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 ---
 
 <header
-    class="fixed top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse">
+    class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse">
     <nav class="font-semibold">
         <a href="/">Accueil</a>
         <a href="/offres">Offres</a>
