--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,5 +1,7 @@
 ---
 import Base from "../layout/Base.astro";
+import Card from "../components/Card.astro";
+
 const offres = [
     {
         adresse: "2821 Lake Sevilla, Palm Harbor, TX",
@@ -38,25 +40,18 @@ const offres = [
 ---
 
 <Base titre="Offres">
-<div>
-    <h1 class="flex justify-center p-40 font-mono text-8xl">Offres</h1>
-</div>
-<div>
-    {
-        offres.map((fname)=>(
-            <ul>
-                <li>{fname.adresse}</li>
-                <li>{fname.favori}</li>
-                <li>{fname.id}</li>
-                <li>{fname.nbSdb}</li>
-                <li>{fname.nomMaison}</li>
-                <li>{fname.prix}</li>
-                <li>{fname.surface}</li>
-                <li>{fname.imgUrl}</li>
-            </ul>
-        )
-    
-    )
-    }
-</div>
+    <div x-data="{ showFavorites: false }">
+        <button @click="showFavorites = !showFavorites" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded p-4 m-4">
+        <span x-show="!showFavorites">Afficher les favoris</span>
+        <span x-show="showFavorites">Afficher tout</span>
+        </button>
+
+        <div x-show="!showFavorites">
+        {offres.map((offre) => <Card {...offre} />)}
+        </div>
+        <div x-show="showFavorites">
+        {offres.map((offre) => offre.favori && <Card {...offre} />)}
+        </div>
+    </div>
+  <Card />
 </Base>
