Style et grille pages offres

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<footer class="fixed bottom-0 w-full bg-indigo-900 text-neutral-50 p-10 flex flex-col items-center">
+<footer class="relative bottom-0 w-full bg-indigo-900 text-neutral-50 p-10 flex flex-col items-center">
     <p>Site test crée par Juan Camilo Veloza Acila :D</p>
     <p>© 2025</p>
 </footer>
