--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -46,10 +46,10 @@ const offres = [
         <span x-show="showFavorites">Afficher tout</span>
         </button>
 
-        <div x-show="!showFavorites">
+        <div x-show="!showFavorites" class="grid grid-cols-3 gap-4">
         {offres.map((offre) => <Card {...offre} />)}
         </div>
-        <div x-show="showFavorites">
+        <div x-show="showFavorites" class="grid grid-cols-3 gap-4" x-transition:enter="transition ease-out duration-300 transform" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity 100 scale-100">
         {offres.map((offre) => offre.favori && <Card {...offre} />)}
         </div>
     </div>
