--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,16 +1,25 @@
 ---
-const {...offre}=Astro.props;
+const { ...offre } = Astro.props;
+
+console.log("orrfe .", offre);
 ---
-<div class="bg-white rounded-lg shadow-lg p-4 border border-gray-200 m-5" >
+
+<div class="bg-white rounded-lg shadow-lg p-4 border border-gray-200 m-5">
    <ul class="p-4 bg-gray-100">
-    <li>{offre.adresse}</li>
-    <li>{offre.favori}</li>
-    <li>{offre.id}</li>
-    <li>{offre.nbChambres}</li>
-    <li>{offre.nbSdb}</li>
-    <li>{offre.nomMaison}</li>
-    <li>{offre.prix}</li>
-    <li>{offre.surface}</li>
-    <li>{offre.imgUrl}</li>
+      <li>{offre.adresse}</li>
+      <li>{offre.favori}</li>
+      <li>{offre.nbChambres} chambres</li>
+      <li>{offre.nbSdb} salles des bain</li>
+      <li>{offre.nomMaison}</li>
+      <li>{offre.prix} $</li>
+      <li>{offre.surface} m2</li>
+      <img src={offre.imageUrl} alt="" />
    </ul>
+   
+   <div class="px-4 bg-indigo-300" x-data ="{open: false}">
+      <button @click="open = ! open">Grille</button>
+   </div>
+   <div>
+
+   </div>
 </div>
