--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,47 +1,17 @@
 ---
 import Base from "../layout/Base.astro";
 import Card from "../components/Card.astro";
+import { AllMaisons } from "../backend.mjs";
 
-const offres = [
-    {
-        adresse: "2821 Lake Sevilla, Palm Harbor, TX",
-        favori: true,
-        id: "64l3n8nar836i5j",
-        nbChambres: 4,
-        nbSdb: 2,
-        nomMaison: "Beverly Springfield",
-        prix: 2700,
-        surface: 45,
-        imgUrl: "image1.png",
-    },
-    {
-        adresse: "2699 Green Valley, Highland Lake",
-        favori: true,
-        id: "lo831zeg10hpm9y",
-        nbChambres: 4,
-        nbSdb: 2,
-        nomMaison: "Palm Harbor",
-        prix: 2095,
-        surface: 42,
-        imgUrl: "image2.png",
-    },
-    {
-        adresse: "909 Woodland St, Michigan, IN",
-        favori: false,
-        id: "s1zuhj19x8eb242",
-        nbChambres: 4,
-        nbSdb: 3,
-        nomMaison: "Faulkner Ave",
-        prix: 4550,
-        surface: 80,
-        imgUrl: "image3.png",
-    },
-];
+const offres = await AllMaisons();
 ---
 
 <Base titre="Offres">
     <div x-data="{ showFavorites: false }">
-        <button @click="showFavorites = !showFavorites" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded p-4 m-4">
+        <button
+        @click="showFavorites = !showFavorites"
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded p-4 m-4"
+        >
         <span x-show="!showFavorites">Afficher les favoris</span>
         <span x-show="showFavorites">Afficher tout</span>
         </button>
@@ -49,9 +19,15 @@ const offres = [
         <div x-show="!showFavorites" class="grid grid-cols-3 gap-4">
         {offres.map((offre) => <Card {...offre} />)}
         </div>
-        <div x-show="showFavorites" class="grid grid-cols-3 gap-4" x-transition:enter="transition ease-out duration-300 transform" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity 100 scale-100">
+        <div
+        x-show="showFavorites"
+        class="grid grid-cols-3 gap-4"
+        x-transition:enter="transition ease-out duration-300 transform"
+        x-transition:enter-start="opacity-0 scale-90"
+        x-transition:enter-end="opacity 100 scale-100"
+        >
         {offres.map((offre) => offre.favori && <Card {...offre} />)}
         </div>
     </div>
-  <Card />
+    <Card />
 </Base>
