--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,7 +1,7 @@
 ---
-import Base from "../layout/Base.astro";
-import Card from "../components/Card.astro";
-import { AllMaisons } from "../backend.mjs";
+import Base from "../../layout/Base.astro";
+import Card from "../../components/Card.astro";
+import { AllMaisons } from "../../backend.mjs";
 
 const offres = await AllMaisons();
 ---
