Route Dynamique dans Card vers les maisons TP4

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,5 +14,6 @@ console.log("orrfe .", offre);
       <li>{offre.prix} $</li>
       <li>{offre.surface} m2</li>
       <img src={offre.imageUrl} alt="" />
+      <a href={`/offres/${offre.id}`}>Voir plus</a>
    </ul>
-
+</div>
