--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,11 @@
 ---
 
 <header
-    class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse">
-    <nav class="font-semibold">
-        <a href="/">Accueil</a>
-        <a href="/offres">Offres</a>
-    </nav>
+  class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse"
+>
+  <nav class="font-semibold">
+    <a href="/">Accueil</a>
+    <a href="/offres">Offres</a>
+    <a href={`/offres/surface/${80}`}>Trier par surface</a>
+  </nav>
 </header>
