creation surface et prix TP4

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,11 +3,9 @@
 ---
 
 <header
-  class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse"
+  class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse gap-3"
 >
-  <nav class="font-semibold">
+  <nav class="font-semibold lg:gap-10">
     <a href="/">Accueil</a>
-    <a href="/offres">Offres</a>
-    <a href={`/offres/surface/${80}`}>Trier par surface</a>
   </nav>
 </header>
