--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,7 @@
 ---
 const { ...offre } = Astro.props;
 
-console.log("orrfe .", offre);
+// console.log("orrfe .", offre);
 ---
 
 <div class="bg-white rounded-lg shadow-lg p-4 border border-gray-200 m-5">
