--- a/src/pages/offres/[id].astro
+++ b/src/pages/offres/[id].astro
@@ -10,13 +10,13 @@ if (!offre) {
 ---
 
 <Base titre={offre.Nom_Maison}>
-  <h2>{offre.Nom_maison}</h2>
+  <h2 class="lg:flex justify-center text-2xl p-10">{offre.Nom_maison}</h2>
   <ul>
+    <li>{offre.Adresse}Californie</li>
+    <li>{offre.favori}</li>
     <li>{offre.Numero_de_Chambres}Chambres</li>
     <li>{offre.Numero_sale_de_bain} sales des bains</li>
-    <li>{offre.Adresse}Californie</li>
     <li>{offre.surface} m2</li>
-    <li>{offre.favori}</li>
     <li>{offre.date}</li>
     <li>{offre.agent.agent_nom}</li>
     <li>{offre.prix}</li>
