Ajouter des pages Agents et creation des interactions côte client - TP 6

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,11 +2,11 @@
 
 ---
 
-<header
-  class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 flex justify-between items-center flex-row-reverse gap-3"
->
-  <nav class="font-semibold lg:gap-10">
+<header class="relative top-0 w-full bg-violet-200 text-neutral-900 p-6 lg:flex lg:justify-between items-center">
+
+  <nav class="font-semibold gap-18">
     <a href="/">Accueil</a>
     <a href="../../offres">Offres</a>
+    <a href="../../agents">Agents</a>
   </nav>
 </header>
