--- a/src/pages/offres/[id].astro
+++ b/src/pages/offres/[id].astro
@@ -15,7 +15,7 @@ if (!offre) {
     <li>{offre.Adresse}Californie</li>
     <li>{offre.favori}</li>
     <li>{offre.Numero_de_Chambres}Chambres</li>
-    <li>{offre.Numero_sale_de_bain} sales des bains</li>
+    <li>{offre.numero_sale_de_bain} sales des bains</li>
     <li>{offre.surface} m2</li>
     <li>{offre.date}</li>
     <li>{offre.agent.agent_nom}</li>
