--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,19 +4,40 @@ const { ...offre } = Astro.props;
 // console.log("orrfe .", offre);
 ---
 
-<div class="bg-white rounded-lg shadow-lg p-4 border border-gray-200 m-5">
+<div
+  x-data={`{favori: ${offre.favori}, clickFavori() {this.favori = !this.favori; setFavori(${JSON.stringify(offre)});}}`}
+  class="bg-white rounded-lg shadow-lg p-4 border border-gray-200 m-5"
+>
   <ul class="p-4 bg-gray-100">
     <li><h1 class="text-xl pb-4">{offre.Nom_maison}</h1></li>
     <li>{offre.Adresse}</li>
     <li>{offre.Favori}</li>
     <li>{offre.Numero_de_chambres} chambres</li>
-    <li>{offre.nbSdb} salles des bain</li>
+    <li>{offre.numero_sale_de_bain} salles des bain</li>
     <li>{offre.prix} $</li>
     <li>{offre.surface} m2</li>
     <img src={offre.imageUrl} alt="" />
 
-    <div class="flex justify-center p-4 bg-black text-white">
-    <a href={`/offres/${offre.id}`}>Voir plus</a>
+    <div class="flex justify-center items-center p-4 bg-indigo-200 text-black font-bold">
+      <a href={`/offres/${offre.id}`}>Voir plus</a>
+      <div>
+        <button
+          class="bottom-0 left-0 p-2 text-white rounded-br-lg"
+          @click="clickFavori"
+        >
+          <img
+            :src="favori ? '/favorite_filled.png' : '/favorite.png'"
+            alt="Favorite Icon"
+            class="w-6 h-6"
+          />
+        </button>
+      </div>
     </div>
   </ul>
 </div>
+
+<script>
+  //@ts-nocheck
+  import { setFavori } from "../backend.mjs";
+  window.setFavori = setFavori;
+</script>
