--- a/src/pages/offres/add.astro
+++ b/src/pages/offres/add.astro
@@ -2,18 +2,20 @@
 import Base from "../../layout/Base.astro";
 import { addOffre } from "../../backend.mjs";
 
-let message = "";
-if (Astro.request.method === "POST") {
-  const formData = await Astro.request.formData();
-  const response = await addOffre(formData);
-  // message = response.message;
-}
+// let message = "";
+// // if (Astro.request.method === "POST") {
+// //   const formData = await Astro.request.formData();
+// //   const response = await addOffre(formData);
+//   // message = response.message;
+// }
 ---
-
 <Base>
-  <div class="">
-    <h1 class="text-lg">Ajouter une offre</h1>
+  <div class="lg: flex lg:justify-center lg:p-8">
+    <h1 class="lg:text-5xl font-bold">AJOUTER UNE MAISON</h1>
+  </div>
+<div class="p-4 border border-indigo-300 rounded-lg shadow-lg m-5">
     <form action="/offres/add" method="POST" enctype="multipart/form-data">
+
       <input
         type="text"
         name="Nom_maison"
@@ -21,22 +23,48 @@ if (Astro.request.method === "POST") {
         required
         class="w-full mt-2 p-2 border border-gray-300 rounded-md"
       />
-      <input type="number" name="prix" placeholder="Prix" />
-      <input
-        type="number"
-        name="Numero_sale_de_bain"
-        placeholder="Nombre de salles de bain"
-      />
-      <input
-        type="number"
-        name="Numero_de_chambres"
-        placeholder="Nombre de chambres"
-      />
-      <input type="number" name="surface" placeholder="Superficie" />
-      <input type="file" name="image_maison" />
+      <div class="mt-2">
+        <input
+          type="number"
+          name="prix"
+          placeholder="Prix"
+          class="w-full p-2 border border-gray-300 rounded-md"
+        />
+      </div>
+      <div class="mt-2">
+        <input
+          type="number"
+          name="Numero_sale_de_bain"
+          placeholder="Nombre de salles de bain"
+          class="w-full p-2 border border-gray-300 rounded-md"
+        />
+      </div>
+      <div class="mt-2">
+        <input
+          type="number"
+          name="Numero_de_chambres"
+          placeholder="Nombre de chambres"
+          class="w-full p-2 border border-gray-300 rounded-md"
+        />
+      </div>
+      <div class="mt-2">
+        <input
+          type="number"
+          name="surface"
+          placeholder="Superficie"
+          class="w-full p-2 border border-gray-300 rounded-md"
+        />
+      </div>
+      <div class="mt-2">
+        <input
+          type="file"
+          name="image_maison"
+          class="w-full p-2 border border-gray-300 rounded-md"
+        />
+      </div>
 
-      <div class="pt-6">
-        <button class="p-4 bg-indigo-200" type="submit">Ajouter</button>
+      <div class="flex justify-center pt-6">
+        <button class="px-20 py-2 bg-indigo-200 rounded-xl" type="submit">Ajouter</button>
       </div>
     </form>
   </div>
